# flask_gb

./: README.md
lesson_02/: wsgi.py
lesson_02/blog/: app.py
lesson_02/blog/report/: views.py
lesson_02/blog/templates/: base.html  navbar.html
lesson_02/blog/templates/reports/: details.html  list.html
lesson_02/blog/templates/users/: list.html
lesson_02/blog/user/: views.py
lesson_1/: pyproject.toml
lesson_1/blog/: app.py
